
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 NOV 12a
  * in model/chem/_Cs_Air_Plasma_11s/chem.c and model/chem/_Cs_Air_Plasma_15s/chem.c
    - turned back on the cesium townsend ionization function of Te
    - added cesium townsend ionization function of Estar
  * in model/chem/_Cs_Air_Plasma_11s/doc/report.tex and model/chem/_Cs_Air_Plasma_15s/doc/report.tex
    - added cesium townsend ionization function of Estar
  * in model/thermo/_generic/thermo.c
    - in _mue_from_rhok_Te() and find_dmue_from_rhok_Te(), changed  muei=1.342e16*pow(Te,1.5)/Ni; 
      to muei=1.061e16*pow(Te,1.5)/Ni;
  * in model/thermo/doc/report.tex
    - added references to where muei is obtained and adjusted electron mobility in the table
      where it is listed to include both electron-ion and electron-neutral collisions
      

2020 NOV 10a
  * in bin/MHD_generator_cesium.wrp
    - updated the control file so that it can be used with any chemical solver
  * in lib/gridg/eg
    - updated the gridg files that were outdated
  * in model/emfield/_Epotential*/emfield.c
    - changed the call to _muk_from_rhok_Tk_Ek()
    - changed the call to _mue_from_rhok_Te()
  * in model/thermo/_generic/thermo.c
    - in find_nuk_eta_kappa(), changed the calls to _muk_from_rhok_Tk_Ek() 
    - added _mue_from_rhok_Te()
    - added find_dmue_from_rhok_Te()
    - changed the call of _muk_from_N_Tk_Ek() to _muk_from_rhok_Tk_Ek()
    - changed the call of _dmukN_dTk_from_Tk_EkoverN() to find_dmuk_from_rhok_Tk_Ek()
  * in model/fluid/_*_plasma/fluid_source.c
    - changed the call to _mue_from_rhok_Te()
    - in find_dSe_dU_transport(), added call to find_dmue_from_rhok_Te() and changed some
      partial derivatives within the Jacobian