@@ -174,7 +174,7 @@ Model(
     sigmadiv=1e-10; {S/m}
     etdiv=1e-1;     {J/kg}
     Pmin=1.0e-2;    Pmax=9.9e99;   {Pa}
-    Tmin=1.0e1;     Tmax=26.0e3;    {K}
+    Tmin=1.0e2;     Tmax=26.0e3;    {K}
     Tvmin=Tmin;     Tvmax=Tmax;  {K}
     Temin=Tmin;     Temax=60.0e3;  {K}
     Twmin=Tmin;     Twmax=Tmax;    {K}
@@ -195,12 +195,12 @@ Model(
     Te_buffer=300.0;    {"buffer" electron temp. in K needed when determining mue: Te=max(Te,Te_buffer);  
                        needed to prevent convergence hangs where |E| becomes close to 0;
                        set to as little a value as possible but at least as high as 300 K}
-    Jmax=20000.0;     {the maximum current density in A/m2 expected in the domain; this will affect only
+    Jmax=200000.0;     {the maximum current density in A/m2 expected in the domain; this will affect only
                        the Townsend ionization rates; make sure Jmax > sigma*Emag in the converged solution.}
     SetRelativePermittivity(is,js,ks, ie,je,ke, 1.0 );
     SetSolidConductivity(is,js,ks, ie,je,ke, 0.0 {S/m});
     SetElectroMotiveForce(is,js,ks, ie,je,ke, 0.0{V/m},0.0{V/m},0.0{V/m}, 1e99{max power in W/m3});
-    SetMagneticField(is,js,ks, ie,je,ke, 0{T},0{T},0{T});
+    SetMagneticField(is,js,ks, ie,je,ke, 0{T},0{T},1{T});
     {make sure that (A_x,A_y,A_z) or (B_x,B_y,B_z) do not lie on top of a node }
     {AddMagnetDipole({A_x}0, {A_y}0, {A_z}0, {B_x}0, {B_y}0.01, {B_z}0, {Bd}1);} {add a dipole with the origin at A, and strength Bd at B}
     {AddMagnetDipoleRow({A_x}0, {A_y}0, {A_z}0, {B_x}0, {B_y}0.01, {B_z}0, {Bd}1, {numsteps}200);} {add a dipole row starting from A and ending at B, with Bd the flux}
@@ -225,11 +225,11 @@ Init(
     _______________________________________________________________________________________
 
     }
-    Vx=600; {m/s}
+    Vx=1500; {m/s}
     Vy=0; {m/s}
     Vz=0; {m/s}
-    P=10000; {Pa}
-    T=300; {K}
+    P=70000; {Pa}
+    T=3000; {K}
     Tv=T; {K}
     Te=3000; {K}
     Species("O2","N2","Cs","e-","Cs+","default");
@@ -357,15 +357,16 @@ Cycle(
     if (iter>iterlim,
       CFLmax=0.2;
     ,{else}
-      CFLmax=0.5;
+      CFLmax=0.2;
     );
     CFL=min(CFL*1.05,CFLmax);
     UpdateFluid(CFL,PRECON_LOCALTIMESTEP,sigma1,sigma2);
     Lc=1e10;      {characteristic length scale in meters used to solve the emfield equation}
     relaxEMF=0.8; {relaxation factor forced on the update of the emfield variables}
-    if (iter>iterlim,
+    if (iter>5,
+      {UpdateEMField(Lc,relaxEMF,TSEMF_IMAF,5); }
       UpdateEMField(Lc,relaxEMF,TSEMF_SOR,800); 
-      UpdateEMField(Lc,relaxEMF,TSEMF_SOR,800); 
+      UpdateEMField(Lc,relaxEMF,TSEMF_SOR,800);
       {UpdateEMField(Lc,relaxEMF,TSEMF_SOR,800); 
       UpdateEMField(Lc,relaxEMF,TSEMF_SOR,800); }
     );
