@@ -27,6 +27,10 @@ echo "Removing proprietary directory .././model/chem/_H2_Cs_Air_Plasma_15s"
 rm -rf .././model/chem/_H2_Cs_Air_Plasma_15s 
 cp -a _proprietary .././model/chem/_H2_Cs_Air_Plasma_15s 
 ( printf "current H2_Cs_Air_Plasma_15s\nEND" ) > .././model/chem/_H2_Cs_Air_Plasma_15s/.config 
+echo "Removing proprietary directory .././model/chem/_H2_He_CH4_Plasma_13s"
+rm -rf .././model/chem/_H2_He_CH4_Plasma_13s 
+cp -a _proprietary .././model/chem/_H2_He_CH4_Plasma_13s 
+( printf "current H2_He_CH4_Plasma_13s\nEND" ) > .././model/chem/_H2_He_CH4_Plasma_13s/.config 
 echo "Removing proprietary directory .././model/fluid/_Navier-Stokes_plasma"
 rm -rf .././model/fluid/_Navier-Stokes_plasma 
 cp -a _proprietary .././model/fluid/_Navier-Stokes_plasma 
