@@ -21,6 +21,7 @@ option   H2_Air_13s
 optionP  H2_Air_Plasma_13s
 optionP  H2_Air_Plasma_18s
 optionP  H2_Cs_Air_Plasma_15s
+optionP  H2_He_CH4_Plasma_13s
 option   N2_Plasma_3s_3r
 help     A number followed by "s" denotes the number of species within the chemical model while a number followed by "r" denotes the number of reactions. The chemical models that include charged species are denoted by "plasma".  
 END
